# LUNG-CT-SCAN-CLASSIFIER

./: .gitignore  10_export_calibrated_checkpoint.py  1_split_dataset.py  2_train.py  3_eval.py  4_make_gradcam_panel.py  5_update_readme.py  6_plot_curves.py  7_plot_confmat.py  7_plot_confusion_and_classwise.py  8_calibration_and_thresholds.py  9_calibration_metrics_and_temp_scaling.py  9_temp_scaling_and_calibration_metrics.py  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
experiments/: summary.csv
experiments/exp01_resnet/: calibration_report_val.json  classwise_metrics.md  evaluation.json  optimal_thresholds.json
experiments/exp02_vit/: calibration_report_val.json  evaluation.json  optimal_thresholds.json
experiments/exp03_resvit/: calibration_report_val.json  evaluation.json  optimal_thresholds.json
experiments/exp03_resvit/figs/: manifest.json
src/models/: resnet.py  resvit.py  vit.py
src/utils/: common.py  dataset.py  gradcam_utils.py  metrics.py  train_loop.py
